--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -267,6 +267,12 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/y"
                     android:visibility="invisible"/>
+                <ImageView
+                    android:id="@+id/imgControllerTap"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/tap"
+                    android:visibility="invisible"/>
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
